# codex

sdk/python/: README.md  pyproject.toml
sdk/python/examples/: basic_streaming.py
sdk/python/src/openai_codex_sdk/: __init__.py  codex.py  events.py  exec.py  items.py  options.py  output_schema_file.py  thread.py
sdk/python/tests/: test_exec.py  test_output_schema_file.py  test_thread.py
